--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     -->
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Store Phone</title>
 
   </head>
